--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,7 +61,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 						</li>
 						<li><a href="contact.html">联系我们</a></li>
-						<li><a href="geren.html">会员</a></li>
+						<li><a href="../combo/viptc">会员</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
@@ -107,14 +107,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="clearfix"></div>
 		<!-- //banner-slider -->
 		<div class="sim-button button12"><a href="../basic_message/GeRen">个人中心</a></div>
-		<div class="agileits-social">
-			<ul>
-				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fa fa-rss"></i></a></li>
-				<li><a href="#"><i class="fa fa-vk"></i></a></li>
-			</ul>
-		</div>
 	</div>
 </div>
 <!--//home-->
@@ -139,7 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3_agileits_services_grid_1">
 						<i class="fa fa-list-alt" aria-hidden="true"></i>
 					</div>
-					<h3>我要置顶</h3>
+					<h3><a href="../Top/showtop">我要置顶</a></h3>
 				</div>
 			</div>
 			<div class="w3_agileits_services_grid">
@@ -147,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3_agileits_services_grid_1">
 						<i class="fa fa-phone" aria-hidden="true"></i>
 					</div>
-					<h3><a href="../class_text/showText">文字课堂</a></h3>
+					<h3><a href="../send_paste/SelBC">文字课堂</a></h3>
 				</div>
 			</div>
 			<div class="w3_agileits_services_grid">
@@ -161,43 +153,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"> </div>
 		</div>
 		<div class="col-md-6 regstr-r-w3-agileits">
-			<div class="form-bg-w3ls">
-				<h3 class="subhead-agileits white-w3ls">Interested in assisted services....?</h3>
-				<p class="para-agileits-w3layouts">Leave your details below, we'll call you back.</p>
+			<div class="form-bg-w3ls" >
+				<h3 class="subhead-agileits white-w3ls">我的资料</h3>
 				<form action="#" method="post">
-					<input type="text" name="Name" placeholder="Full name" required="">
-					<input type="text" name="number" placeholder="Number" required="">
-					<input type="email" name="Email" placeholder="Email" required="">
-					<select class="form-control">
-						<option>Select Location</option>
-						<option>Bangalore</option>
-						<option>Chandigarh</option>
-						<option>Kolkata</option>
-						<option>Ludhiana</option>
-						<option>Mumbai</option>
-						<option>Mysore</option>
-						<option>Pune</option>
-					</select>
-					<input type="submit" value="Submit" class="button-w3layouts hvr-rectangle-out">
+					<img src="sss" id="zp" style="height: 140px;width: 140px;"><br><br>
+					<span style="color: white">昵称:</span><p id="nc" style="color: white;display: inline-block"></p><br><br>
+					<span style="color: white">ID:</span><p id="num" style="color: white;display: inline-block"></p><br><br>
+					<a href="../basic_message/GeRen">完善资料</a>&nbsp;&nbsp;&nbsp;
+					<a href="#" id="lujing">预览</a>
 				</form>
 			</div>
 		</div>
 	</div>
 </div>
 <!-- //services -->
-
 <!-- about -->
-
 <!-- //about-bottom -->
-<!--search-section -->
-<div class="search-wthree">
-	<div class="container">
-		<h3 class="subheading-agileits-w3layouts">Start your journey with confidence.</h3>
-		<div class="sim-button button12"><a href="matches.html">搜索</a></div>
-		<div class="clearfix"> </div>
-	</div>
-</div>
-<!--//search-section -->
 <!--middle-section -->
 <!--//middle-section -->
 <!--//mobile-app -->
@@ -361,7 +332,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<i class="fa fa-heart-o heart2" aria-hidden="true"></i>
 					</div>
 				</div>
-				<div class="sim-button button12"><a href="contact.html">联系我们</a></div>
+				<div class="sim-button button12"><a href="../vip/men">联系我们</a></div>
 				<h2>我们致力于提供卓越的服务.</h2>
 			</div>
 		</div>
@@ -422,7 +393,35 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				}
 			}
 		});
-
+		function GetCookie(name) {
+			var ck = document.cookie;
+			var exp1 = new RegExp(name + "=.*?(?=;|$)");
+			var mch = ck.match(exp1);
+			return mch ? unescape(mch[0].substring(name.length + 1)) : null;
+		}
+		let d=GetCookie("bmid");
+		$.ajax({
+			url:"../Details_message/ajid",
+			type: "post",
+			data:{bmid:d},
+			success:function (data) {
+				let p=data["pic"];
+				console.log("p:"+p);
+				let n=data["bmname"];
+				console.log("昵称:"+n);
+				let d=data["number"];
+				console.log("ID:"+d);
+				let bmid=data["bmid"];
+				console.log("bmid:"+bmid);
+				$("#zp").attr("src",p);
+				$("#nc").html(n);
+				$("#num").html(d);
+				$("#lujing").attr("href","../basic_message/findAllById?bmid="+bmid);
+			},
+			error:function (err) {
+				console.log(err);
+			}
+		})
 	});
 </script>
 <script type="text/javascript" src="../js/jquery.flexisel.js"></script>
