--- a/src/main/resources/templates/vips.html
+++ b/src/main/resources/templates/vips.html
@@ -54,11 +54,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="../message/qlists">消息列表</a></li>
-                                <li><a href="icons.html">我的关注</a></li>
+                                <li><a href="../attention/mygz">我的关注</a></li>
                             </ul>
                         </li>
-                        <li><a href="contact.html">联系我们</a></li>
-                        <li><a href="geren.html">会员</a></li>
+                        <li><a href="../send_paste/pinglun">交友论坛</a></li>
+                        <li><a href="../combo/viptc">会员</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"></div>
@@ -159,7 +159,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="w3ls_footer_grid">
             <div class="col-md-4 w3ls_footer_grid_left">
                 <h4>位置:</h4>
-                <p>Matrimonium Elite, Ipswich,<br> Foxhall Road, UK</p>
+                <p>Matrimonium Elite, Ipswich,<br> 河南郑州市</p>
             </div>
             <div class="col-md-4 w3ls_footer_grid_left">
                 <h4>联系我们:</h4>
@@ -182,36 +182,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <i class="fa fa-heart-o heart2" aria-hidden="true"></i>
                     </div>
                 </div>
-                <div class="sim-button button12"><a href="contact.html">联系我们</a></div>
+                <div class="sim-button button12"><a href="../vip/men">联系我们</a></div>
                 <h2>我们致力于提供卓越的服务.</h2>
             </div>
         </div>
         <!-- footer-button-info -->
-    </div>
-</div>
-
-<div class="botttom-nav-agileits">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="matches.html">Matches</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</div>
-<div class="footer-w3layouts">
-    <div class="container">
-        <div class="agile-copy">
-            <p>? 2017 Elite Match. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
-        </div>
-        <div class="agileits-social">
-            <ul>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                <li><a href="#"><i class="fa fa-vk"></i></a></li>
-            </ul>
-        </div>
-        <div class="clearfix"></div>
     </div>
 </div>
 <!--/footer -->
