--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -41,7 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <!-- header -->
         <div class="header-inner">
             <h1 class="logo">
-                <a href="index.html">甜蜜<span>交友</span></a></h1>
+                <a href="index.html">甜蜜<span>Sweet</span></a></h1>
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -54,24 +54,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- navbar-header -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">主页</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="matches.html">Matches</a></li>
+                        <li><a href="index.html" class="active">首页</a></li>
+                        <li><a href="../basic_message/zhaoboy">找男友</a></li>
+                        <li><a href="../basic_message/zhaogirl">找女友</a></li>
                         <li class="dropdown menu__item">
-                            <a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">Pages<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="codes.html">Short Codes</a></li>
-                                <li><a href="icons.html">Icons</a></li>
+                                <li><a href="../message/qlists">消息列表</a></li>
+                                <li><a href="../attention/mygz">我的关注</a></li>
                             </ul>
                         </li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="../send_paste/pinglun">交友论坛</a></li>
+                        <li><a href="../combo/viptc">会员</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
             </nav>
             <div class="header-right-w3ls">
-                <a href="tologin">登录</a>
-                <a href="toRegister">注册</a>
+                <a href="../basic_message/tologin">登录</a>
+                <a href="../basic_message/toRegister">注册</a>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -161,18 +162,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <div class="w3ls_footer_grid">
             <div class="col-md-4 w3ls_footer_grid_left">
-                <h4>Location:</h4>
-                <p>Matrimonium Elite, Ipswich,<br> Foxhall Road, UK</p>
+                <h4>位置:</h4>
+                <p>Matrimonium Elite, Ipswich,<br> 河南郑州市</p>
             </div>
             <div class="col-md-4 w3ls_footer_grid_left">
-                <h4>Contact us:</h4>
-                <p><span>Phone : </span>505-222-5432</p>
-                <p><span>Email : </span><a href="mailto:info@example.com">info@example.com</a></p>
+                <h4>联系我们:</h4>
+                <p><span>电话 : </span>505-222-5432</p>
+                <p><span>电子邮箱 : </span><a href="mailto:info@example.com">info@example.com</a></p>
             </div>
             <div class="col-md-4 w3ls_footer_grid_left">
-                <h4>Opening hours:</h4>
-                <p>Working days (8am-9pm)</p>
-                <p>Sundays (9am-1pm)</p>
+                <h4>营业时间:</h4>
+                <p>工作日（上午8点至晚上9点）</p>
+                <p>周日 (上午9点-下午1点)</p>
             </div>
             <div class="clearfix"> </div>
         </div>
@@ -185,36 +186,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <i class="fa fa-heart-o heart2" aria-hidden="true"></i>
                     </div>
                 </div>
-                <div class="sim-button button12"><a href="contact.html">联系我们</a></div>
-                <h2>We’re Committed to Service Excellence.</h2>
+                <div class="sim-button button12"><a href="../vip/men">联系我们</a></div>
+                <h2>我们致力于提供卓越的服务.</h2>
             </div>
         </div>
         <!-- footer-button-info -->
-    </div>
-</div>
-
-<div class="botttom-nav-agileits">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="matches.html">Matches</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</div>
-<div class="footer-w3layouts">
-    <div class="container">
-        <div class="agile-copy">
-            <p>© 2017 Elite Match. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
-        </div>
-        <div class="agileits-social">
-            <ul>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                <li><a href="#"><i class="fa fa-vk"></i></a></li>
-            </ul>
-        </div>
-        <div class="clearfix"></div>
     </div>
 </div>
 
