--- a/src/main/resources/templates/matches.html
+++ b/src/main/resources/templates/matches.html
@@ -187,66 +187,41 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!--login-inner-->
 <!-- footer -->
-<div class="w3l_footer">
+	<div class="w3l_footer">
 		<div class="container">
-				<div class="w3ls_footer_grid">
-					<div class="col-md-4 w3ls_footer_grid_left">
-							<h4>Location:</h4>
-							<p>Matrimonium Elite, Ipswich,<br> Foxhall Road, UK</p>
-					</div>
-					<div class="col-md-4 w3ls_footer_grid_left">
-							<h4>Contact us:</h4>
-							<p><span>Phone : </span>505-222-5432</p>
-							<p><span>Email : </span><a href="mailto:info@example.com">info@example.com</a></p>
-					</div>
-					<div class="col-md-4 w3ls_footer_grid_left">
-							<h4>Opening hours:</h4>
-							<p>Working days (8am-9pm)</p>
-							<p>Sundays (9am-1pm)</p>
-					</div>
-					<div class="clearfix"> </div>
+			<div class="w3ls_footer_grid">
+				<div class="col-md-4 w3ls_footer_grid_left">
+					<h4>位置:</h4>
+					<p>Matrimonium Elite, Ipswich,<br> 河南郑州市</p>
 				</div>
-				<!-- footer-button-info -->
-				<div class="footer-middle-agileinfo">
-					<div class="footer-button">
+				<div class="col-md-4 w3ls_footer_grid_left">
+					<h4>联系我们:</h4>
+					<p><span>电话 : </span>505-222-5432</p>
+					<p><span>电子邮箱 : </span><a href="mailto:info@example.com">info@example.com</a></p>
+				</div>
+				<div class="col-md-4 w3ls_footer_grid_left">
+					<h4>营业时间:</h4>
+					<p>工作日（上午8点至晚上9点）</p>
+					<p>周日 (上午9点-下午1点)</p>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<!-- footer-button-info -->
+			<div class="footer-middle-agileinfo">
+				<div class="footer-button">
 					<div class="button-top-w3layouts">
 						<div class="logo-icons-w3ls">
 							<i class="fa fa-heart heart1" aria-hidden="true"></i>
 							<i class="fa fa-heart-o heart2" aria-hidden="true"></i>
 						</div>
 					</div>
-						<div class="sim-button button12"><a href="contact.html">Contact Us</a></div>
-						<h2>We’re Committed to Service Excellence.</h2>
-					</div>
-				</div>
-				<!-- footer-button-info -->
-		</div>
-</div>
-
-<div class="botttom-nav-agileits">
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="matches.html">Matches</a></li>
-		<li><a href="contact.html">Contact</a></li>
-	</ul>
-</div>
-<div class="footer-w3layouts">
-				<div class="container">
-				<div class="agile-copy">
-					<p>© 2017 Elite Match. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
-				</div>
-				<div class="agileits-social">
-					<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-rss"></i></a></li>
-							<li><a href="#"><i class="fa fa-vk"></i></a></li>
-						</ul>
-				</div>
-					<div class="clearfix"></div>
+					<div class="sim-button button12"><a href="../vip/men">联系我们</a></div>
+					<h2>我们致力于提供卓越的服务.</h2>
 				</div>
 			</div>
+			<!-- footer-button-info -->
+		</div>
+	</div>
 <!--/footer -->
 
 <!-- js -->
