--- a/src/main/resources/templates/relation.html
+++ b/src/main/resources/templates/relation.html
@@ -55,11 +55,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="../message/qlists">消息列表</a></li>
-								<li><a href="icons.html">我的关注</a></li>
+								<li><a href="../attention/mygz">我的关注</a></li>
 							</ul>
 						</li>
-						<li><a href="contact.html">联系我们</a></li>
-						<li><a href="geren.html">会员</a></li>
+						<li><a href="../send_paste/pinglun">交友论坛</a></li>
+						<li><a href="../combo/viptc">会员</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
@@ -115,7 +115,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="w3ls_footer_grid">
 			<div class="col-md-4 w3ls_footer_grid_left">
 				<h4>位置:</h4>
-				<p>Matrimonium Elite, Ipswich,<br> Foxhall Road, UK</p>
+				<p>Matrimonium Elite, Ipswich,<br> 河南郑州市</p>
 			</div>
 			<div class="col-md-4 w3ls_footer_grid_left">
 				<h4>联系我们:</h4>
@@ -143,31 +143,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 		<!-- footer-button-info -->
-	</div>
-</div>
-
-<div class="botttom-nav-agileits">
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="matches.html">Matches</a></li>
-		<li><a href="contact.html">Contact</a></li>
-	</ul>
-</div>
-<div class="footer-w3layouts">
-	<div class="container">
-		<div class="agile-copy">
-			<p>? 2017 Elite Match. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
-		</div>
-		<div class="agileits-social">
-			<ul>
-				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fa fa-rss"></i></a></li>
-				<li><a href="#"><i class="fa fa-vk"></i></a></li>
-			</ul>
-		</div>
-		<div class="clearfix"></div>
 	</div>
 </div>
 <!--/footer -->
