--- a/src/main/resources/templates/GeRen.html
+++ b/src/main/resources/templates/GeRen.html
@@ -86,7 +86,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-2">
-            <a class="list-group-item active">商品管理</a>
+            <a class="list-group-item active">个人管理</a>
             <a href="../basic_message/Selmate"  target="myframe" class="list-group-item"><img src="../images/tubiao1.png">基本信息</a>
             <a href="../Details_message/SelDetails" target="myframe" class="list-group-item"><img src="../images/tubiao1.png">详细信息</a>
             <a href="../life_message/Selmate" target="myframe" class="list-group-item"><img src="../images/tubiao1.png">生活信息</a>
