--- a/src/main/resources/templates/seek.html
+++ b/src/main/resources/templates/seek.html
@@ -97,7 +97,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div style="width: 1090px;height: 200px;background: #fff3cd;margin-bottom: 30px">
             <form action="../attention/mhncid2" method="post" style="margin-bottom: 20px;">
                 意中人:<input type="text" name="params"  placeholder="请输入ID或昵称精准搜索" style="width: 380px;margin-top: 40px">
-                <!--意中人:<input type="text" name="bmname"  placeholder="请输入昵称精准搜索" style="width: 380px;margin-top: 40px">-->
                 <input type="submit" value="搜索" class="btn btn-info" style="width: 85px;height: 30px">
             </form>
             <hr/>
@@ -119,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <option value="随便">学历不限</option>
                             <option value="初中">初中</option>
                             <option value="高中">高中</option>
-                            <option value="大专">大专</option>
+                            <option value="专科">专科</option>
                             <option value="本科">本科</option>
                         </select>
                         <select style="width: 120px;" name="monthly">
