--- a/src/main/resources/templates/tops.html
+++ b/src/main/resources/templates/tops.html
@@ -92,9 +92,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="tittle-agileinfo">
             <h3>我要置顶</h3>
         </div>
-        <div style="width: 1180px;height: 900px;background: darkorchid">
-            <h2 style="color: white;margin-left: 75px;margin-top: 30px">解锁收信/发信&nbsp;&nbsp;快速找对象</h2><br/>
-            <h3 style="color: white;margin-left: 75px;">甜蜜会员多项超实用特权,总有一项帮到你</h3>
+        <div style="width: 1180px;height: 800px;background: darkorchid">
+            <h2 style="color: white;margin-left: 75px;margin-top: 30px">优先排序在最前</h2><br/>
+            <h3 style="color: white;margin-left: 75px;">吸引更多的关注，增加相亲成功概率</h3>
             <span th:each="t : ${ts}">
             <div style="border: 8px solid yellow;width: 300px;height: 280px;display: inline-block;margin-top: 80px;margin-left: 60px;background: white">
 
