--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -92,8 +92,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="tittle-agileinfo">
 					<h3>举报</h3>
 				</div>
-				<div class="col-md-6 regstr-r-w3-agileits">
-				<div class="form-bg-w3ls">
+				<div class="col-md-6 regstr-r-w3-agileits" style="width: 1160px">
+				<div class="form-bg-w3ls" >
 					<h3 class="subhead-agileits white-w3ls">举报该用户</h3>
 					<form action="../dispose/tianjia" method="post" id="fm">
 						<span th:each="t : ${typess}">
@@ -103,7 +103,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<!--举报人id-->
 						<input type="hidden" name="bmid" id="jbid">
 						<p style="color: white">举报类型:</p>
-						<select name="types" style="width: 310px; height: 45px" id="lx">
+						<select name="types" style="width: 410px; height: 45px" id="lx">
 							<option value="0">请选择</option>
 							<option value="1">色情</option>
 							<option value="2">骚扰信息</option>
@@ -111,55 +111,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<option value="4">其他</option>
 						</select>
 						<textarea name="reason" placeholder="请填写举报理由，详细描述你所遇到的情况，以便客服人员快速为你进行处理" required="" id="yuanyin"></textarea>
-						<input type="button" value="取消" style="width: 80px;height: 40px;" onclick="tiao()">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" value="提交" style="width: 80px;height: 40px;" onclick="tijiao()">
+						<input type="button" value="取消" style="width: 80px;height: 40px;" onclick="tiao()">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" value="提交" style="width: 80px;height: 40px;" onclick="tijiao()">
 					</form>
 				</div>
 				</div>
-				<div class="col-md-6 contact-agileits-w3layouts">
-					<div id="horizontalTab">
-							<ul class="resp-tabs-list">
-							<li>
-								<h6>California</h6>
-							</li>
-							<li>
-								<h6>USA</h6>
-							</li>
-							<li>
-								<h6>New York</h6>
-							</li>
-							<li>
-								<h6>UK</h6>
-							</li>
-							</ul>
-							<div class="resp-tabs-container">
-							<div class="tab1">
-								<p class="para-agileits-w3layouts"><span>Location : </span>1600 Exposition Blvd, Sacramento, CA 95815, USA</p>
-								<p class="para-agileits-w3layouts"><span>Call Us : </span>505-606-5432</p>
-								<p class="para-agileits-w3layouts"><span>Email : </span><a href="mailto:info@example.com">info@example.com</a></p>
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99824.8709286373!2d-121.33074619389458!3d38.567705354191816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x280fd5261e96d7e6!2sCalifornia+State+Fair!5e0!3m2!1sen!2sin!4v1490439507422"></iframe>
-							</div>
 
-							<div class="tab2">
-								<p class="para-agileits-w3layouts"><span>Location : </span>25095 Blue Ravine Rd, Folsom, CA 95630, USA</p>
-								<p class="para-agileits-w3layouts"><span>Call Us : </span>032-625-4592</p>
-								<p class="para-agileits-w3layouts"><span>Email : </span><a href="mailto:info@example.com">info@example.com</a></p>
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3114.2088705425613!2d-121.12137568485247!3d38.6900461667452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ae480c563ff67%3A0xd5aa0569c974a0a6!2sMexquite+Mexican+Restaurant!5e0!3m2!1sen!2sin!4v1490439685562"></iframe>
-							</div>
-							<div class="tab3">
-								<p class="para-agileits-w3layouts"><span>Location : </span>253 Church St, New York, NY 10013, USA</p>
-								<p class="para-agileits-w3layouts"><span>Call Us : </span>077-961-5426</p>
-								<p class="para-agileits-w3layouts"><span>Email : </span><a href="mailto:info@example.com">info@example.com</a></p>
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.0051536537085!2d-74.00760038479508!3d40.7179030451917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a2016ad0821%3A0xa6bb46d566a740b7!2sKori+Tribeca!5e0!3m2!1sen!2sin!4v1490440032827"></iframe>
-							</div>
-							<div class="tab4">
-								<p class="para-agileits-w3layouts"><span>Location : </span>Sacramento, Welwyn, UK</p>
-								<p class="para-agileits-w3layouts"><span>Call Us : </span>505-792-2654</p>
-								<p class="para-agileits-w3layouts"><span>Email : </span><a href="mailto:info@example.com">info@example.com</a></p>
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39445.20117152928!2d-0.23465869969804293!3d51.83675868651679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487624b0caefa34f%3A0x246a752af1fed599!2sWelwyn%2C+UK!5e0!3m2!1sen!2sin!4v1490439907190"></iframe>
-							</div>
-							</div>
-					</div>
-				</div>
 		</div>
 </div>
 <!--login-inner-->
