--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -165,7 +165,7 @@
             <option value="中学" th:selected="${Dlist.education=='中学'}">中学</option>
             <option value="高中" th:selected="${Dlist.education=='高中'}">高中</option>
             <option value="本科" th:selected="${Dlist.education=='本科'}">本科</option>
-            <option value="大专" th:selected="${Dlist.education=='大专'}">大专</option>
+            <option value="专科" th:selected="${Dlist.education=='专科'}">专科</option>
         </select>
     </div>
 
