--- a/src/main/resources/templates/relation.html
+++ b/src/main/resources/templates/relation.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://wwww.thymeleaf.org">
 <head>
-<title>Elite Match a Matrimonial Category Bootstrap Responsive Website Template  | Contact :: W3layouts</title>
+<title>relation</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -65,7 +65,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"></div>
 			</nav>
 			<div class="header-right-w3ls">
-				<a href="..basic_message/tologin">登录</a>
+				<a href="..basic_message/tologin">退出</a>
 				<a href="../basic_message/toRegister">注册</a>
 			</div>
 			<div class="clearfix"></div>
