--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Elite Match a Matrimonial Category Bootstrap Responsive Website Template  | Login :: W3layouts</title>
+    <title>login</title>
     <!-- for-mobile-apps -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -22,7 +22,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!--引入toastr  已封装如jy.js-->
     <!--<link href="../css/toastr.min.css" rel="stylesheet" type="text/css" />-->
 
-
     <style>
         .toast-center-center {
             top: 50%;
@@ -33,7 +32,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </style>
 </head>
 <body>
-
 
 <!--banner start here-->
 <div class="banner-w3ls inner-banner-agileits" id="home">
@@ -54,7 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- navbar-header -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html" class="active">首页</a></li>
+                        <li><a href="../basic_message/listAll" class="active">首页</a></li>
                         <li><a href="../basic_message/zhaoboy">找男友</a></li>
                         <li><a href="../basic_message/zhaogirl">找女友</a></li>
                         <li class="dropdown menu__item">
@@ -85,8 +83,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <div class="w3l_agileits_breadcrumbs_inner">
             <ul>
-                <li><a href="index.html">主页</a><span>&#187;</span></li>
-
+                <!--<li>主页<span>&#187;</span></li>-->
                 <li>登录</li>
             </ul>
         </div>
@@ -112,46 +109,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="agile_remember">
                     <div class="agile_remember_left">
                         <div class="check">
-                            <label class="checkbox"><input id="cktf" type="checkbox" name="checkbox" onclick="pdck()" checked><i> </i>remember me</label>
+                            <label class="checkbox"><input id="cktf" type="checkbox" name="checkbox" onclick="pdck()" checked><i> </i>记住密码</label>
                         </div>
                     </div>
                     <div class="agile_remember_right">
-                        <a href="#">Forgot Password?</a>
+                        <a data-toggle="modal" href="#Zhmm">忘记了密码?</a>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
                 <input type="submit" value="登录">
             </form>
-            <h4><a data-toggle="modal" href="#Zhmm">找回密码</a></h4>
-            <div class="social_icons agileinfo_social_asd">
-                <!-- Facebook -->
-                <a href="#" class="slide-social wthree_slide_social">
-                    <div class="button">5 Likes</div>
-                    <div class="facebook icon"> <i class="fa fa-facebook" aria-hidden="true"></i> </div>
-                    <div class="facebook slide">
-                        <p>Facebook</p>
-                    </div>
-                </a>
-                <!-- Twitter -->
-                <a href="#" class="slide-social wthree_slide_social">
-                    <div class="button">8 Tweets</div>
-                    <div class="twitter icon"> <i class="fa fa-twitter" aria-hidden="true"></i> </div>
-                    <div class="twitter slide">
-                        <p>Twitter</p>
-                    </div>
-                </a>
-            </div>
+
         </div>
         <div class="col-md-4 login-right-info">
-            <h3 class="subhead-agileits">Why Join Elite Match</h3>
-            <p class="para-agileits-w3layouts" >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h3 class="subhead-agileits">甜蜜APP，助你成功寻爱</h3>
+            <!--<p class="para-agileits-w3layouts" >你的爱情，我牵线——甜蜜交友网</p>-->
             <ul>
-                <li><i class="fa fa-check" aria-hidden="true"></i>Lorem ipsum</li>
-                <li><i class="fa fa-check" aria-hidden="true"></i>Vivamus lacus</li>
-                <li><i class="fa fa-check" aria-hidden="true"></i>quisquam est</li>
-                <li><i class="fa fa-check" aria-hidden="true"></i>Pellentesque</li>
+                <li><i class="fa fa-check" aria-hidden="true"></i>找对象·上甜蜜·专业的·更可靠</li>
+                <li><i class="fa fa-check" aria-hidden="true"></i>专注于郑州婚恋，经验丰富</li>
+                <li><i class="fa fa-check" aria-hidden="true"></i>拥有受过专业的婚恋心理培训红娘</li>
+                <li><i class="fa fa-check" aria-hidden="true"></i>拥有高质量的男女嘉宾</li>
             </ul>
-            <h5>Don't have an account?<i class="fa fa-hand-o-down" aria-hidden="true"></i></h5>
             <div class="sim-button button12"><a href="toRegister">注册</a></div>
         </div>
     </div>
