--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-    <title>Elite Match a Matrimonial Category Bootstrap Responsive Website Template | Register :: W3layouts</title>
+    <title>register</title>
     <!-- for-mobile-apps -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -55,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- navbar-header -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html" class="active">首页</a></li>
+                        <li><a href="../basic_message/listAll" class="active">首页</a></li>
                         <li><a href="../basic_message/zhaoboy">找男友</a></li>
                         <li><a href="../basic_message/zhaogirl">找女友</a></li>
                         <li class="dropdown menu__item">
@@ -72,7 +72,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="clearfix"></div>
             </nav>
             <div class="header-right-w3ls">
-                <a href="..basic_message/tologin">登录</a>
+                <a href="../basic_message/tologin">登录</a>
                 <a href="../basic_message/toRegister">注册</a>
             </div>
             <div class="clearfix"></div>
@@ -86,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <div class="w3l_agileits_breadcrumbs_inner">
             <ul>
-                <li><a href="index.html">主页</a><span>&#187;</span></li>
+                <li>登录<span>&#187;</span></li>
 
                 <li>注册</li>
             </ul>
@@ -115,53 +115,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         获取验证码
                     </span>
                 </div>
-                <input type="submit" value="Sign Up" />
+                <input type="submit" value="注册"/>
             </form>
-            <h4>Continue With</h4>
-            <div class="social_icons agileinfo_social_asd">
-                <!-- Facebook -->
-                <a href="#" class="slide-social wthree_slide_social">
-                    <div class="button">5 Likes</div>
-                    <div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div>
-                    <div class="facebook slide">
-                        <p>Facebook</p>
-                    </div>
-                </a>
-                <!-- Twitter -->
-                <a href="#" class="slide-social wthree_slide_social">
-                    <div class="button">8 Tweets</div>
-                    <div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div>
-                    <div class="twitter slide">
-                        <p>Twitter</p>
-                    </div>
-                </a>
-            </div>
         </div>
+
         <div class="col-md-4 login-right-info">
-            <h3 class="subhead-agileits">Why Join Elite Match</h3>
-            <p class="para-agileits-w3layouts">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h3 class="subhead-agileits">甜蜜APP，助你成功寻爱</h3>
+           <p class="para-agileits-w3layouts">你的爱情，我牵线——甜蜜交友网</p>
             <ul>
-                <li><i class="fa fa-check" aria-hidden="true"></i>Lorem ipsum</li>
-                <li><i class="fa fa-check" aria-hidden="true"></i>Vivamus lacus</li>
-                <li><i class="fa fa-check" aria-hidden="true"></i>quisquam est</li>
-                <li><i class="fa fa-check" aria-hidden="true"></i>Pellentesque</li>
+                <li><i class="fa fa-check" aria-hidden="true"></i>找对象·上甜蜜·专业的·更可靠</li>
+                <li><i class="fa fa-check" aria-hidden="true"></i>专注于郑州婚恋，经验丰富</li>
+                <li><i class="fa fa-check" aria-hidden="true"></i>拥有受过专业的婚恋心理培训红娘</li>
+                <li><i class="fa fa-check" aria-hidden="true"></i>拥有高质量的男女嘉宾</li>
             </ul>
-            <h5>Already a member....<i class="fa fa-hand-o-down" aria-hidden="true"></i></h5>
-            <div class="sim-button button12"><a href="login.html">Login</a></div>
-        </div>
-        <div class="col-md-4 login-right-info right-info-find">
-            <h3 class="subhead-agileits">Easy steps to find your life partner</h3>
-            <ul>
-                <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i>Vivamus lacus nisl, suscipit in vehicula sit
-                    amet, sollicitudin eget eros.
-                </li>
-                <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i>Neque porro quisquam est qui dolorem ipsum quia
-                    dolor sit amet.
-                </li>
-                <li><i class="fa fa-ellipsis-v" aria-hidden="true"></i>Vivamus lacus nisl, suscipit in vehicula sit
-                    amet, sollicitudin eget eros.
-                </li>
-            </ul>
+            <div class="sim-button button12"><a href="../basic_message/tologin">登录</a></div>
         </div>
     </div>
 </div>
