--- a/src/main/resources/templates/tops.html
+++ b/src/main/resources/templates/tops.html
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="clearfix"></div>
             </nav>
             <div class="header-right-w3ls">
-                <a href="../basic_message/tologin">登录</a>
+                <a href="../basic_message/tologin">退出</a>
                 <a href="../basic_message/toRegister">注册</a>
             </div>
             <div class="clearfix"></div>
