--- a/src/main/resources/templates/boyfriend.html
+++ b/src/main/resources/templates/boyfriend.html
@@ -79,7 +79,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    <div class="container">
 		<div class="w3l_agileits_breadcrumbs_inner">
 			<ul>
-				<li><a href="index.html">主页</a><span>&#187;</span></li>
+				<li>主页<span>&#187;</span></li>
 									
 				<li>找男友</li>
 				</ul>
@@ -108,7 +108,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <li><a href="#"><i class="fa fa-rss"></i></a></li>-->
                             </ul>
                         </div>
-                        <div class="team-img">
+                        <div class="team-img" style="background:url(../images/love2.png) no-repeat;height: 363px">
 						    <img th:src="${b.pic}" alt="">
 					    </div>
                 </div>
