--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,9 +50,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- navbar-header -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html" class="active">首页</a></li>
+						<li><a href="../basic_message/listAll" class="active">首页</a></li>
 						<li><a href="../basic_message/zhaoboy">找男友</a></li>
-						<li><a href="../basic_message/zhaogirl">找女友</a></li>
+					 	<li><a href="../basic_message/zhaogirl">找女友</a></li>
 						<li class="dropdown menu__item">
 							<a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">消息中心<span class="caret"></span></a>
 							<ul class="dropdown-menu">
@@ -166,12 +166,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 </div>
-<!-- //services -->
-<!-- about -->
-<!-- //about-bottom -->
 <!--middle-section -->
-<!--//middle-section -->
-<!--//mobile-app -->
 <section class="w3ls-team text-center">
 	<div class="container">
 		<div class="tittle-agileinfo">
@@ -187,7 +182,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a th:href="@{'../basic_message/findAllById?bmid='+${b.bmid}}"><i class="fa fa-twitter">详情信息</i></a></li>
 						</ul>
 					</div>
-					<div class="team-img">
+					<div class="team-img" style="background:url(../images/love2.png) no-repeat;height: 363px">
 						<img th:src="${b.pic}" alt="">
 					</div>
 				</div>
@@ -201,30 +196,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="test" id="clients">
 	<div class="container">
 		<div class="tittle-agileinfo">
-			<h3 class="white-w3ls">快乐夫妇</h3>
+			<h3 class="white-w3ls">成功结婚</h3>
 		</div>
 		<div class="test-gri1">
 			<div id="owl-demo2" class="owl-carousel">
 				<div class="test-grid1">
 					<img src="../images/t1.jpg" alt="" class="img-r">
-					<h4>Abelard & Heloise</h4>
-					<span>Couple 1</span>
-					<p>Lorem ipsum dolor sit amet, Ut enim ad minim veniam, quis.Lorem ipsum dolor .</p>
+					<h4>欣然 & Grant</h4>
+					<span>感慨</span>
+					<p>谋事在人，成事在天</p>
 				</div>
 				<div class="agile">
 					<div class="test-grid1">
 						<img src="../images/t2.jpg" alt="" class="img-r">
-						<h4>Bonnie & Clyde</h4>
-						<span>Couple 2</span>
-						<p>Lorem ipsum dolor sit amet, Ut enim ad minim veniam, quis.Lorem ipsum dolor .</p>
+						<h4>康康 & 公主晚安</h4>
+						<span>感慨</span>
+						<p>珍惜缘分，爱你一生！</p>
 					</div>
 				</div>
 				<div class="agile">
 					<div class="test-grid1">
 						<img src="../images/t3.jpg" alt="" class="img-r">
-						<h4>Jack & Sally</h4>
-						<span>Couple 3</span>
-						<p>Lorem ipsum dolor sit amet, Ut enim ad minim veniam, quis.Lorem ipsum dolor .</p>
+						<h4>娇娇妹 & Mondler</h4>
+						<span>感慨</span>
+						<p>缘分，有时就是分分钟</p>
 					</div>
 				</div>
 			</div>
