--- a/src/main/resources/templates/lists.html
+++ b/src/main/resources/templates/lists.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://wwww.thymeleaf.org">
 <head>
-<title>Elite Match a Matrimonial Category Bootstrap Responsive Website Template  | Codes :: W3layouts</title>
+<title>lists</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -47,7 +47,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- navbar-header -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html" class="active">首页</a></li>
+						<li><a href="../basic_message/listAll" class="active">首页</a></li>
 						<li><a href="../basic_message/zhaoboy">找男友</a></li>
 						<li><a href="../basic_message/zhaogirl">找女友</a></li>
 						<li class="dropdown menu__item">
@@ -78,7 +78,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    <div class="container">
 		<div class="w3l_agileits_breadcrumbs_inner">
 			<ul>
-				<li><a href="index.html">主页</a><span>&#187;</span></li>
+				<li>主页<span>&#187;</span></li>
 									
 				<li>消息中心</li>
 				</ul>
