--- a/src/main/resources/templates/seek.html
+++ b/src/main/resources/templates/seek.html
@@ -79,7 +79,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    <div class="container">
 		<div class="w3l_agileits_breadcrumbs_inner">
 			<ul>
-				<li><a href="index.html">主页</a><span>&#187;</span></li>
+				<li>主页<span>&#187;</span></li>
 									
 				<li>搜索</li>
 				</ul>
